syntax = "proto3";

option csharp_namespace = "UserProto";

// Endpoints
service UsersService {
  // Get Profile
  rpc GetProfile(Empty) returns (UserResponse){};
  // Update Profile
  rpc UpdateProfile(UpdateUserProfileDto) returns (UpdateUserProfileResponse){};
}

// Models
message UserDto {
    int32 id = 1;
    string name = 2;
    string firstLastName = 3;
    string secondLastName = 4;
    string rut = 5;
    string email = 6;
    CareerDto career = 7;
}

message UpdateUserProfileDto {
    string name = 1;
    string firstLastName = 2;
    string secondLastName = 3;
}

message CareerDto {
    int32 id = 1;
    string name = 2;
}

// Responses 
message Empty {

}

message UserResponse {
  UserDto user = 1;
}

message UpdateUserProfileResponse {
  UpdateUserProfileDto user = 1;
}